Counter (proof pages)
added counter to proof pages

--- a/proof-uk.html
+++ b/proof-uk.html
@@ -683,6 +683,8 @@ function toggleZoomCrop() {
 window.toggleZoomCrop = toggleZoomCrop;
 
 </script>
-
+<div id="sfcu3cr41s8ucfgqju4ud7sfbp4mfn6y7p7"></div>
+<script type="text/javascript" src="https://counter1.optistats.ovh/private/counter.js?c=u3cr41s8ucfgqju4ud7sfbp4mfn6y7p7&down=async" async></script>
+<noscript><a href="https://www.freecounterstat.com" title="free website visitor counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=u3cr41s8ucfgqju4ud7sfbp4mfn6y7p7" border="0" title="free website visitor counter" alt="free website visitor counter"></a></noscript>
 </body>
 </html>
